# rust-gob

./: Cargo.toml  README.md
benches/: serialize.rs
serde_schema/: Cargo.toml
serde_schema/src/: lib.rs  schema.rs  serialize.rs  serializer.rs  types.rs
serde_schema/src/types/: builders.rs  mod.rs
serde_schema/tests/: derive.rs
serde_schema_derive/: Cargo.toml
serde_schema_derive/src/: lib.rs
src/: de.rs  error.rs  gob.rs  lib.rs  schema.rs
src/de/: array_value.rs  complex_value.rs  field_value.rs  map_value.rs  mod.rs  slice_deserializer.rs  slice_seq.rs  slice_value.rs  struct_deserializer.rs  struct_map.rs  struct_value.rs  value.rs  value_deserializer.rs
src/internal/: gob.rs  mod.rs
src/internal/de/: array_value.rs  complex_value.rs  field_value.rs  map_value.rs  mod.rs  seq_value.rs  slice_value.rs  struct_value.rs  value.rs
src/internal/ser/: mod.rs  serialize_empty.rs  serialize_map.rs  serialize_seq.rs  serialize_struct.rs  serialize_tuple.rs  serialize_variant.rs  serialize_wire_types.rs
src/internal/types/: array_type.rs  common_type.rs  map_type.rs  mod.rs  slice_type.rs  struct_type.rs  type_id.rs  wire_type.rs
src/internal/utils/: bow.rs  buffer.rs  bufvec.rs  mod.rs  ringbuf.rs  uniqmap.rs  uniqvec.rs
src/ser/: mod.rs  output.rs  serialize_map.rs  serialize_seq.rs  serialize_struct.rs  serialize_struct_variant.rs  serialize_tuple.rs
src/types/: array_type.rs  common_type.rs  map_type.rs  mod.rs  slice_type.rs  struct_type.rs  type_id.rs  wire_type.rs
tests/: de.rs  lib.rs  ser.rs
tests/de/: integration.rs  mod.rs
tests/reference/: generate.sh
tests/reference/input/: array_of_bool_empty.go  array_of_bool_non_empty.go  bool_struct.go  empty_struct.go  empty_values.go  enum_with_newtype_variants.go  enum_with_struct_variants.go  map_empty.go  map_non_empty.go  non_empty_values.go  point_struct.go  point_struct_skip_x.go  slice_of_bool_empty.go  slice_of_bool_empty_twice.go  slice_of_bool_non_empty.go  slice_of_bool_non_empty_twice.go
tests/reference/output/: array_of_bool_empty.gob  array_of_bool_non_empty.gob  bool_struct.gob  empty_struct.gob  empty_values.gob  enum_with_newtype_variants.gob  (+10 more)
tests/ser/: integration.rs  mod.rs
tests/utils/: go.rs  macros.rs  mod.rs
