[package]
name = "gob"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]

[dependencies]
byteorder = "1.2.2"
bytes = "0.4.6"
lazy_static = "1.0.0"
serde = "1.0.39"
serde_derive = "1.0.42"
serde_schema = { git = "https://github.com/srijs/rust-serde-schema", features = ["bytes"] }
serde_schema_derive = { git = "https://github.com/srijs/rust-serde-schema" }
smallvec = "0.6.1"

[dev-dependencies]
serde_bytes = "0.10.4"
